[gd_scene load_steps=12 format=2]

[ext_resource path="res://Textures/Items/Chest (1).png" type="Texture" id=1]
[ext_resource path="res://Textures/Items/Chest (3).png" type="Texture" id=2]
[ext_resource path="res://Textures/Items/Chest (4).png" type="Texture" id=3]
[ext_resource path="res://Textures/Items/Chest (2).png" type="Texture" id=4]
[ext_resource path="res://Scripts/Treasure.gd" type="Script" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 66.6913, 61.1091 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 102.327, 10 )

[sub_resource type="Animation" id=3]
resource_name = "Chest_Close"
length = 0.5
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 3 ), ExtResource( 2 ), ExtResource( 4 ), ExtResource( 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "Chest_Closed"
length = 0.1
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 1 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.5
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 1 ), ExtResource( 4 ), ExtResource( 2 ), ExtResource( 3 ) ]
}

[sub_resource type="Animation" id=6]
length = 0.1
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 3 ) ]
}

[node name="TreasureChest" type="StaticBody2D"]
collision_layer = 4
collision_mask = 2
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 3.56357 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Chest_Close = SubResource( 3 )
anims/Chest_Closed = SubResource( 4 )
anims/Chest_Open = SubResource( 5 )
anims/Chest_Opened = SubResource( 6 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
